Anna last updates

--- a/abstract.tex
+++ b/abstract.tex
@@ -283,8 +283,8 @@ Our findings show both similarities and differences with results from previous q
 Based on the pre-match betting odds, all of the England victories were expected in our dataset. This suggests that in the context of England's participation in national football tournaments, it is living up to the expectations of the fans that results in largest emotional effect. Indeed, English newspapers' narratives about the team's performance in these tournaments are characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup\autocite{Vincent2010}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity\autocite{VanderMeij2012}. Anecdotal evidence suggests that alcohol consumption increases following an England victory\autocite{Davies2018}, consistent with our findings.
 
 
-The most widely-dicussed England-based investigation of the link between football and domestic abuse have found that an England loss results in the most pronounced increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. This study used daily data on IPV from Lancashire Constabulary (serving a population of 1.4 million, about half the population of the West Midlands county) for the period of the 2002, 2004 and 2010 World Cup tournaments (June-July). 
-Using daily domestic abuse data from the West Midlands for the period between 2010 and 2018, we find a different pattern, with the largest increase when England wins for alcohol-involved cases of abuse, but no comparable effects when England loses. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28\%--64\%]) and losses (39\%, 95\% CI [18\%--64\%]), and no effect when England draws. Our reanalysis replicates the win effect seen in the current data in the earlier sample, though the absence of a loss effect remains a stark difference between the two studies. While our data is from a different geographical area and time period, the discrepancy is still puzzling. \AT{Hopefully I managed to emphasize that our study is way more comprehensive \& sell our results a bit better}
+The most widely-dicussed England-based investigation of the link between football and domestic abuse have found that an England loss results in the most pronounced increase in domestic abuse (38\%), and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. This study used daily data on IPV from Lancashire Constabulary (serving a population of 1.4 million, about half the population of the West Midlands county) for the period of the 2002, 2004 and 2010 World Cup tournaments (June-July). 
+Using daily domestic abuse data from the West Midlands for the period between 2010 and 2018, we find a different pattern, with the largest increase in alcohol-involved cases of abuse when England wins, but no comparable effects when England loses. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28\%--64\%]) and losses (39\%, 95\% CI [18\%--64\%]), and no effect when England draws. Our reanalysis replicates the win effect seen in the current data in the earlier sample, though the absence of a loss effect remains a stark difference between the two studies. While our data is from a different geographical area and time period, the discrepancy is still puzzling. \AT{Hopefully I managed to emphasize that our study is way more comprehensive \& sell our results a bit better}
 
 
 To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. Interestingly, an earlier examination of the 2010 World Cup found a similar pattern, using daily data from 33 out of 39 police forces in England\autocite{Brimicombe2012}.
@@ -293,23 +293,23 @@ To explore the underlying reason for this discrepancy and test the robustness of
 While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}), using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). 
 
 Does this effect generalise to other sporting events, or is it specific to football?
-It has been previously suggested that other popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Rugby is the second most popular sport in England after football\autocite{Ipsos2003}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Since the Six Nations takes place every year with 15 matches played by each team as opposed to the World Cup and the European Championship, which are relatively rare, we have many more days when England lost or won. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), potentially stemming from differences in media coverage and audience numbers between the two tournaments. 
+It has been previously suggested that other popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Rugby is the second most popular sport in England after football\autocite{Ipsos2003}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Between 2010 and 2018, there are many more win and loss days of the England rugby union team compared to the England national football team. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), potentially stemming from differences in media coverage and audience numbers between the two tournaments. 
 
-We also investigated whether England match days have similar effects on other types of non-domestic, abusive behaviours, including sexual offences, child and vulnerable adult abuse. A commonality between domestic abuse and these types of offences is the element of control and domination, although domestic abuse is much more frequent in our dataset. We find no evidence that England matches have comparable effects on non-domestic sexual offences and other abuse cases (see Table \ref{otherabuse} in the Appendix). 
+We also investigated whether England match days have similar effects on other types of non-domestic abusive behaviours, including sexual offences, child and vulnerable adult abuse. A commonality between domestic abuse and these types of offences is the element of control and domination, although domestic abuse is much more frequent in our dataset. We find no evidence that England matches have comparable effects on non-domestic sexual offences and other abuse cases (see Table \ref{otherabuse} in the Appendix). 
 
-Our data further allows us to explore the characteristics of alcohol-related domestic abuse perpetrated on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (with no earlier record for the same victim-offender pair in our dataset), happen in a residential dwelling as opposed to a public location, or result in an injury. We find no evidence that domestic abuse cases perpetrated on England match days are more likely to be newly reported (see Table \ref{Characteristics1} in the Appendix), compared to domestic abuse cases occurring on non-match days. Since many fans congregate in pubs on England match days, it could be argued that there is a higher likelihood that domestic abuse occurs outside on these days, making the subsequent reporting of these cases more likely. Interestingly, our results indicate that compared to non-match days, reported cases are more likely to be perpetrated in public on England loss days, but not on England win days, and that this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England loss days are also more likely to result in an injury, a pattern that is absent from alcohol-related cases.
+Our data further allows us to explore the characteristics of alcohol-related domestic abuse perpetrated on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (with no earlier record for the same victim-offender pair in our dataset), happen in a residential dwelling as opposed to a public location, or result in an injury. We find no evidence that domestic abuse cases perpetrated on England match days are more likely to be newly reported (see Table \ref{Characteristics1} in the Appendix), compared to domestic abuse cases occurring on non-match days. It could be argued that since fans often congregate in pubs to watch England play, there is a higher likelihood that domestic abuse occurs in public and get reported on these days. Interestingly, our results indicate that, compared to non-match days, reported cases are more likely to be perpetrated in public on England loss days, but not on England win days, and that this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England loss days are also more likely to result in an injury, a pattern that is absent from alcohol-related cases.
 
-Next, we turn to repeated cases of domestic abuse (multiple cases with the same victim-offender pair). We are interested in whether the number of days elapsed between two consecutive cases is affected by England football matches. For example, it is possible that England match days bring reported cases of domestic abuse forward, which would have otherwise happened at a later point in time. To investigate this question, we use two negative binomial regressions, where the outcome variables are the number of days elapsed since the last reported case, the number of days until the next case, respectively. In addition, using all reported cases, we explore whether the number of hours elapsed before reporting the case is affected by England match days. 
+Next, we turn to repeated cases of domestic abuse (multiple cases with the same victim-offender pair). We are interested in whether the number of days elapsed between two consecutive cases is affected by England football matches. For example, it is possible that England match days bring reported cases of domestic abuse forward, which would have otherwise happened at a later point in time. We investigate this question with two negative binomial regressions, where the outcome variables are the number of days elapsed since the last reported case, and the number of days until the next case, respectively. In addition, using all reported cases, we explore whether the number of hours elapsed before reporting the case is affected by England match days. 
 
-The results show that non-alcohol related cases, but not alcohol-related cases, perpetrated on England loss days occur slightly sooner after the previous incident, compared to non-alcohol repeat cases reoccurring on non-match days (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases, perpetrated on England win days or the day after an England match are more likely to be followed by another case of abuse sooner, compared to cases occurring on non-match days, and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England loss days or on days following an England match day are likely to be reported sooner, compared to non-alcohol related abuse perpetrated on non-match days. 
+The results show that non-alcohol related cases perpetrated on England loss days occur slightly sooner after the previous incident, compared to non-alcohol cases reoccurring on non-match days (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days or the day after an England match are more likely to be followed by another case of abuse sooner, compared to non-alcohol cases occurring on non-match days. Interestingly, non-alcohol related cases perpetrated on England loss days or on days following an England match day are likely to be reported sooner, compared to non-alcohol related abuse perpetrated on non-match days. 
 
-It is perhaps surprising that although we have not found evidence for an increase in the number of reported non-alcohol related domestic abuse cases on England loss days, non-alcohol related domestic abuse perpetrated on these days seems to be characteristically different from domestic abuse perpetrated on other days. More specifically, cases perpetrated on England loss days are more likely to occur outside, result in an injury, and get reported sooner. Furthermore, repeated cases perpetrated on England loss days occur sooner following the previous case, but abuse perpetrated on England win days are followed by another incident sooner. While these findings should be interpreted with caution due to the high levels of underreporting, these results suggest important differences in the emotional effect of England wins and losses.
+It is perhaps surprising that while we found no evidence for an increase in the reported number of domestic abuse cases on England loss days (see Table \ref{specifications}), domestic abuse perpetrated on these days seems to be characteristically different from domestic abuse perpetrated on other days. More specifically, cases perpetrated on England loss days are more likely to occur outside, result in an injury, and get reported sooner. Furthermore, repeated cases perpetrated on England loss days occur slightly sooner following the previous case, but abuse perpetrated on England win days are followed by another incident sooner. While these findings should be interpreted with caution due to the pervasive problem of underreporting, the results suggest differences in the effect of England wins and losses on domestic abuse.
 
  \TM{I think this is a really interesting result! Potentially a nice link back to the Card and Lee results.} \AT{Not sure what's the best way, it is a bit tenuous} \NS{Can we quantify coefficients as a number of days with a CI in the main text. So ``5 days sooner'', etc.? }\NS{Is there a break between the text and the table? England loss no-alcohol cases occur sooner but England-loss no-alcohol cases occur later? England win no-alcohol cases reoccur sooner but England-win alcohol cases do not.} \AT{I don't know how to do this properly. I can report it like this: The results show that non-alcohol related cases perpetrated on England loss days occur slightly sooner after the previous incident, 192 days, 95\% CI [159 days, 232 days], compared to non-alcohol repeat cases reoccurring on non-match days, 226 days, 95\% CI [207 days, 248 days] (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days are more likely to be followed by another case of abuse sooner, 172 days, 95\% CI [138 days, 214 days], compared to cases occurring on non-match days, 242 days, 95\% CI [223 days, 261 days], and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England loss days are likely to be reported sooner, 59 hours, 95\% CI [45 hours, 78 hours], compared to non-alcohol related abuse perpetrated on non-match days, 104 hours, 95\% CI [91 hours, 119 hours].}
 
-Finally, using the sample of repeated cases, we explore whether previously non-alcohol related cases are more likely to reoccur as alcohol-related abuse on England match days. We investigated this question using a logistic regression, controlling for the type of the previous case (alcohol/non-alcohol related). We find that on England win days, there is an increased likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix). Taken together, these results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse cases perpetrated on England win days are not characteristically different from domestic abuse cases perpetrated on other days during the year. 
+Finally, using the sample of repeated cases, we explore whether previously non-alcohol related cases are more likely to reoccur as alcohol-related abuse on England match days. We investigate this question using a logistic regression, controlling for the type of the previous case (alcohol/non-alcohol related). The results show that on England win days, there is an increased likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix). Taken together, these results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse that follows an England victory is not characteristically different from domestic abuse perpetrated on other days during the year. 
 
-Suggested alternative explanations for the increased number of reported domestic abuse cases on England match days include other high-profile events taking place around the time of the match, increased policing on England match days, and the effect of awareness campaigns before the tournaments\autocite{Brooks-Hay2018}. Our three-hour analysis of the England win effect (Figure \ref{fig:threehours}) show that the temporal pattern of the effect is highly consistent with a match-induced explanation of the increase, making it unlikely that other events occurring on England win days would be responsible for the increase. On England match days, we could expect that higher levels of policing would result in an increased number of recorded cases perpetrated outside, and that a successful pre-tournament awareness campaign would result in a higher number of newly reported cases. Our results do not support either of these alternative hypotheses (see Table \ref{Characteristics1} in the Appendix). In addition, it is unclear why the effect of other events, different policing practices, or awareness campaigns would depend on the result of the match. 
+Suggested alternative explanations for the increased number of reported domestic abuse cases on England match days include other high-profile events taking place around the time of the match, increased policing on England match days, and the effect of awareness campaigns before the tournaments\autocite{Brooks-Hay2018}. Our three-hour analysis of the England win effect (Figure \ref{fig:threehours}) show that the temporal pattern of the effect is highly consistent with a match-induced explanation of the increase, making it unlikely that other events occurring on England win days would be responsible for the increase. We could expect that higher levels of policing on England match days would result in an increased number of recorded cases perpetrated outside, and that a successful pre-tournament awareness campaign would result in an increase in the number of newly reported cases. Our results do not support either of these alternative hypotheses (see Table \ref{Characteristics1} in the Appendix). In addition, it is unclear why the effect of other events, different policing practices, or awareness campaigns would depend on the result of the match. 
 
 
 To summarise, we have found that when the England national football team wins, there is a 61\% increase in domestic abuse---but only male-on-female abuse involving alcohol. An increase is also seen in other violent crimes, predominantly in violence perpetrated by men on women. The temporal pattern of the increase suggests a causal mechanism, and the effect is robust to the exclusion of specific tournament years and using data from a different time period and geographical area within England. The effect is specific to football, but not rugby. Apart from the higher likelihood of alcohol-involvement, these cases of abuse are not characteristically different from abuse occurring on other days throughout the year. 
@@ -323,7 +323,7 @@ For victims, domestic abuse does not occur once every four years following a foo
 
 \section{Method}
 
-Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018. The first half of 2017 has been excluded due to missing data. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
+Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018. The first half of 2017 has been excluded due to missing data. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We restricted our analyses to cases with one victim and one offender. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
 
  To analyse the temporal dynamics of the England win effect (see Figure \ref{fig:threehours}), we divided each day in our dataset into eight three-hour periods, the first one starting at 12am, and used these to identify specific time windows around the time of the match. The exact time of the matches vary considerably (the earliest starting at 1pm, and the latest at 11pm). We first identified the three-hour period of the day into which each match falls. If the start and end time of the match did not fall in the same three-hour period, we chose the three-hour period that covers the larger part of the match (e.g., a 2.5 hour long match starting at 7pm will be assigned to the 6-9pm period and not to the 9pm-12am period).
 
