Anna last updates

--- a/abstract.tex
+++ b/abstract.tex
@@ -13,6 +13,7 @@
 %\usepackage{apacite}
 \usepackage[style=nature]{biblatex}
 \usepackage{lineno}
+\usepackage{hyperref}
 \linenumbers
 %\usepackage[backend=biber,style=numeric,sorting=none]{biblatex}
 %\usepackage[backend=biber]{biblatex}
@@ -335,7 +336,9 @@ but restrictions apply to the availability of these data, which were used under 
 for the current study, and so are not publicly available. Data are however available
 from the authors upon reasonable request and with permission of West Midlands Police.
 
+\section*{Code availability}
 
+The code for producing the results can be accessed \href{https://osf.io/kg9yr/}{here}. 
 
 \section*{Appendix}
 
