Anna last updates

--- a/abstract.tex
+++ b/abstract.tex
@@ -338,7 +338,7 @@ from the authors upon reasonable request and with permission of West Midlands Po
 
 \section*{Code availability}
 
-The code for producing the results can be accessed \href{https://osf.io/kg9yr/}{here}. 
+The code for producing the results can be accessed \href{https://osf.io/kg9yr/?view_only=172a33b467bd4566b2e5dea0e2f59f8c}{here}. 
 
 \section*{Appendix}
 
