please check out the cover letter

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -11,8 +11,7 @@
 
 Please consider our manuscript ``Reported cases of alcohol-related domestic abuse increase following the victory of the England national football team'' for publication as a Letter in \textit{Nature Human Behaviour}. This article describes a thorough investigation of the link between football and domestic abuse in England.
 
-The relevance of our manuscript stems from several factors. First, our paper explores a prime example of how exogenous events can have a profound effect on human behaviour through visceral feelings. Second, our study contributes to a growing literature investigating the factors that precipitate violent behaviour. From a policy perspective, understanding these factors is key for designing effective interventions. Third, our results contradict previous findings on the same topic which received significant media attention in the UK media over the past years, and we offer a simple explanation for this discrepancy. In addition, the role of alcohol in the link between football and domestic abuse has not been explored previously, while our study clearly demonstrates that it is a critical factor.
-
+The relevance of our manuscript stems from several factors. First, our paper explores a prime example of how exogenous events can have a profound effect on human behaviour through visceral feelings. Second, our study contributes to a growing literature investigating the factors that precipitate violent behaviour. From a policy perspective, understanding these factors is key for designing effective interventions. Third, our results contradict previous findings on the same topic which received significant media attention in the UK media over the past years, and we attempt to provide an explanation for this discrepancy. In addition, the role of alcohol in the link between football and domestic abuse has not been explored previously, while our study clearly demonstrates that it is a critical factor. Finally, we conducted a wide range of analyses to put our main results into context and provide us with a deeper understanding of the characteristics of domestic abuse that follows an England match.
 
 For these reasons we believe that our study will be of interest to a broad audience, from academics to the media and the wider public.
 
