Anna last update

--- a/abstract.tex
+++ b/abstract.tex
@@ -315,9 +315,9 @@ Suggested alternative explanations for the increased number of reported domestic
 
 To summarise, we have found that when the England national football team wins, there is a 61\% increase in domestic abuse---but only male-on-female abuse involving alcohol. An increase is also seen in other violent crimes, predominantly in violence perpetrated by men on women. The temporal pattern of the increase suggests a causal mechanism, and the effect is robust to the exclusion of specific tournament years and using data from a different time period and geographical area within England. The effect is specific to football, but not rugby. Apart from the higher likelihood of alcohol-involvement, these cases of abuse are not characteristically different from abuse occurring on other days throughout the year. 
 
-For victims, domestic abuse does not occur once every four years following a football match, but is a lived experience of constant fear. Nevertheless, our results provide a deeper understanding of the contexts that can be conducive to abuse. In particular, these findings illuminate that the experience of ``national success'' in a highly male-dominated sport is a breeding ground for male-perpetrated, alcohol-related domestic abuse. From a policy perspective, only a radical transformation of football culture is likely to make any difference\autocite{Swallow}. Leadership in football must be the catalyst for the change that transforms football fandom from an exclusively male-dominated space where misogyny, racism and homophobia are tolerated, into an environment where women and other minorities are more visible, and everyone is welcome and safe from abuse, irrespective of their gender, race and sexual orientation. 
+For victims, domestic abuse does not occur once every four years following a football match, but is a lived experience of constant fear. Nevertheless, our results provide a deeper understanding of the contexts that can be conducive to abuse. In particular, these findings illuminate that the experience of ``national success'' in a highly male-dominated sport is a breeding ground for male-perpetrated, alcohol-related domestic abuse. From a policy perspective, only a radical transformation of football culture is likely to make any difference\autocite{Swallow}. Leadership in football must be the catalyst for the change that transforms football fandom from an exclusively male-dominated space where misogyny is tolerated, into an environment where women and other minorities are more visible, and everyone is welcome and safe from abuse, irrespective of their gender, race or sexual orientation. 
 
-\AT{Is it it too hippie?}
+\AT{Is it too hippie?}
 
 
 \newpage
