Neil last edits

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -9,9 +9,10 @@
 {}
 \opening{Dear Editors,} % Addressed to the editor in chief
 
-Please consider our manuscript ``Reported cases of alcohol-related domestic abuse increase following the victory of the England national football team'' for publication as a Letter in \textit{Nature Human Behaviour}. This article describes a thorough investigation of the link between football and domestic abuse in England.
+Please consider our manuscript ``Reported cases of alcohol-related domestic abuse increase following the victory of the England national football team'' for publication as a Letter in \textit{Nature Human Behaviour}. This article describes a thorough investigation of the link between football and domestic abuse in England. We show that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory
+in a national football tournament. The effect is specific to England wins male upon female alcohol-involved domestic abuse, 
 
-The relevance of our manuscript stems from several factors. First, our paper explores a prime example of how exogenous events can have a profound effect on human behaviour through visceral feelings. Second, our study contributes to a growing literature investigating the factors that precipitate violent behaviour. From a policy perspective, understanding these factors is key for designing effective interventions. Third, our results contradict previous findings on the same topic which received significant media attention in the UK media over the past years, and we attempt to provide an explanation for this discrepancy. In addition, the role of alcohol in the link between football and domestic abuse has not been explored previously, while our study clearly demonstrates that it is a critical factor. Finally, we conducted a wide range of analyses to put our main results into context and provide us with a deeper understanding of the characteristics of domestic abuse that follows an England match.
+The relevance of our manuscript stems from several factors. First, our paper explores a prime example of how exogenous events (here football matches) can have a profound effect on human behaviour through visceral feelings (here on domestic abuse). Second, our study contributes to a growing literature investigating the factors that precipitate violent behaviour. We exploit the largest and most general data set available to date. From a policy perspective, understanding these factors is key for designing effective interventions. Third, our results contradict previous findings on the same topic which received significant media attention in the UK media over the past years, and we attempt to provide an explanation for this discrepancy. In addition, the role of alcohol in the link between football and domestic abuse has not been explored previously, while our study clearly demonstrates that it is a critical factor. Finally, we conducted a wide range of analyses to put our main results into context and provide us with a deeper understanding of the characteristics of domestic abuse that follows an England match.
 
 For these reasons we believe that our study will be of interest to a broad audience, from academics to the media and the wider public.
 
