--- a/abstract.tex
+++ b/abstract.tex
@@ -309,9 +309,9 @@ The results show that non-alcohol related cases perpetrated on England loss days
 
 %The results show that non-alcohol related cases perpetrated on England loss days occur slightly sooner after the previous incident, compared to non-alcohol cases reoccurring on non-match days (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days or the day after an England match are more likely to be followed by another case of abuse sooner, compared to non-alcohol cases occurring on non-match days. Interestingly, non-alcohol related cases perpetrated on England loss days or on days following an England match day are likely to be reported sooner, compared to non-alcohol related abuse perpetrated on non-match days. 
 
-It is perhaps surprising that while we found no evidence for an increase in the reported number of domestic abuse cases on England loss days (see Table \ref{specifications}), domestic abuse perpetrated on these days seems to be characteristically different from domestic abuse perpetrated on other days. More specifically, cases perpetrated on England loss days are more likely to occur outside, result in an injury, and get reported sooner. Furthermore, repeated cases perpetrated on England loss days occur slightly sooner following the previous case, but abuse perpetrated on England win days are followed by another incident sooner. While these findings should be interpreted with caution due to the pervasive problem of underreporting, the results suggest differences in the effect of England wins and losses on domestic abuse.
+Summarising the analysis of case-characteristics (location, harm, timing in Tables \ref{Characteristics1} and \ref{Characteristics2}), it is perhaps surprising that while we found no evidence for an increase in the reported number of domestic abuse cases on England loss days (see Table \ref{specifications}), domestic abuse perpetrated on these days seems to be characteristically different from domestic abuse perpetrated on other days. More specifically, cases perpetrated on England loss days are more likely to occur outside, result in an injury, and get reported sooner. Furthermore, repeated cases perpetrated on England loss days occur slightly sooner following the previous case, but abuse perpetrated on England win days are followed by another incident sooner. While these findings should be interpreted with caution due to the pervasive problem of underreporting, the results suggest differences in the effect of England wins and losses on domestic abuse.
 
- \TM{I think this is a really interesting result! Potentially a nice link back to the Card and Lee results.} \AT{Not sure what's the best way, it is a bit tenuous} \NS{Can we quantify coefficients as a number of days with a CI in the main text. So ``5 days sooner'', etc.? }\NS{Is there a break between the text and the table? England loss no-alcohol cases occur sooner but England-loss no-alcohol cases occur later? England win no-alcohol cases reoccur sooner but England-win alcohol cases do not.} \AT{I don't know how to do this properly. I can report it like this:Finally, using the sample of repeated cases, we explore whether previously non-alcohol related cases are more likely to reoccur as alcohol-related abuse on England match days. We investigate this question using a logistic regression, controlling for the type of the previous case (alcohol/non-alcohol related). The results show that on England win days, there is an increased likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix). Taken together, these results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse that follows an England victory is not characteristically different from domestic abuse perpetrated on other days during the year. 
+% \TM{I think this is a really interesting result! Potentially a nice link back to the Card and Lee results.} \AT{Not sure what's the best way, it is a bit tenuous} \NS{Can we quantify coefficients as a number of days with a CI in the main text. So ``5 days sooner'', etc.? }\NS{Is there a break between the text and the table? England loss no-alcohol cases occur sooner but England-loss no-alcohol cases occur later? England win no-alcohol cases reoccur sooner but England-win alcohol cases do not.} \AT{I don't know how to do this properly. I can report it like this:Finally, using the sample of repeated cases, we explore whether previously non-alcohol related cases are more likely to reoccur as alcohol-related abuse on England match days. We investigate this question using a logistic regression, controlling for the type of the previous case (alcohol/non-alcohol related). The results show that on England win days, there is an increased likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix). Taken together, these results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse that follows an England victory is not characteristically different from domestic abuse perpetrated on other days during the year. 
 
 Suggested alternative explanations for the increased number of reported domestic abuse cases on England match days include other high-profile events taking place around the time of the match, increased policing on England match days, and the effect of awareness campaigns before the tournaments\autocite{Brooks-Hay2018}. Our three-hour analysis of the England win effect (Figure \ref{fig:threehours}) show that the temporal pattern of the effect is highly consistent with a match-induced explanation of the increase, making it unlikely that other events occurring on England win days would be responsible for the increase. We could expect that higher levels of policing on England match days would result in an increased number of recorded cases perpetrated outside, and that a successful pre-tournament awareness campaign would result in an increase in the number of newly reported cases. Our results do not support either of these alternative hypotheses (see Table \ref{Characteristics1} in the Appendix). In addition, it is unclear why the effect of other events, different policing practices, or awareness campaigns would depend on the result of the match. 
 
