--- a/abstract.tex
+++ b/abstract.tex
@@ -50,6 +50,9 @@
 
 Can sporting events act as triggers of domestic abuse? Previous research has suggested a link between large-scale televised sport tournaments and increased rates of reported domestic abuse\autocite{Card2011,Kirby2014}. While hypothesized to be a significant factor, the role alcohol plays in this relationship is unknown. Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we show that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory in a national football tournament (World Cup, European Championship). The effect is driven by male to female alcohol-related cases, and is absent from male to male, female to male, and female to female cases. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours following the victory, and gradually declines to its baseline level 12 hours after the match. This temporal pattern, along with the random allocation of match days strongly indicates a causal effect of an England victory on alcohol-related domestic abuse. We find a comparable increase in other, violent, male to female, alcohol-related offences on England win days.  The win-effect is robust to the exclusion of specific tournament years, and using data from another geographical area within England. The domestic abuse that occurs on these days is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. The alcohol and time specificity go beyond existing reports of the link between football and domestic abuse \autocite{Kirby2014,Brimicombe2012}. 
 
+\TM{Agree with Neil on the start, but also do not feel strongly. I would include something that really emphasises the specificity of alcohol as the mechanism for increased incidents, as this is one of the really nice novel things about these results. I have tried something that is clucky and horrible.}
+Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we show that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory in a national football tournament (World Cup, European Championship). The effect is driven by male to female alcohol-related cases, and is absent from male to male, female to male, and female to female cases and from cases where there is no alcohol involved. A temporal analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours following the victory, and gradually declines to its baseline level 12 hours after the match. This temporal pattern, along with the random allocation of match days strongly indicates a causal effect of an England victory on alcohol-related domestic abuse. We find a comparable increase in other, violent, male to female, alcohol-related offences on England win days.  The win-effect is robust to the exclusion of specific tournament years, and using data from another geographical area within England. The domestic abuse that occurs on these days is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. The alcohol and time specificity go beyond existing reports of the link between football and domestic abuse \autocite{Kirby2014,Brimicombe2012}.
+
 %252 words now, should be less than 300
 
 % \section*{Long introduction}
@@ -279,7 +282,7 @@ Next, we explore the temporal dynamics of the increase in alcohol-related domest
 
 \section*{Discussion}
 
-Our results have shown that an England victory in a national football tournament is followed by a 61\% increase in the reported number of alcohol-related domestic abuse. This is a large effect, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals, against a base rate 0.71 cases per 100,000. The effect is entirely limited to alcohol-related abuse, even though alcohol-related domestic abuse cases comprise only 23\% of all domestic abuse in our dataset. As such, we see this as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England. The effect is also exclusively limited to male-perpetrated domestic abuse, implicating masculinity and alcohol consumption as the pathway by which football increases abuse. The temporal pattern of the increase following an England victory is highly consistent with a causal explanation, further supported by the fact that the allocation of England win days can be considered random. %\AT{Is this ok?}
+Our results have shown that an England victory in a national football tournament is followed by a 61\% increase in the reported number of alcohol-related domestic abuse cases. This is a large effect, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals, against a base rate 0.71 cases per 100,000. The effect is entirely limited to alcohol-related abuse, even though alcohol-related domestic abuse cases comprise only 23\% of all domestic abuse in our dataset. As such, we see this as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England. The effect is also exclusively limited to male-perpetrated domestic abuse, implicating masculinity and alcohol consumption as the pathway by which football increases abuse. The temporal pattern of the increase following an England victory is highly consistent with a causal explanation, further supported by the fact that the allocation of England win days can be considered random. %\AT{Is this ok?} \TM{I really like this paragraph}
 
 
 Our findings show both similarities and differences with results from previous quantitative investigations. Replicating the results of a previous US study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. In the same study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses. In contrast, we find that in the context of England and football, it is a victory that results in the largest increase, and that alcohol involvement is critical. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect of sports-induced emotional cues on domestic abuse is highly sensitive to the cultural context. 
@@ -297,37 +300,40 @@ To explore the underlying reason for this discrepancy and test the robustness of
 While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}), using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). 
 
 Does this effect generalise to other sporting events, or is it specific to football?
-It has been previously suggested that other popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Rugby is the second most popular sport in England after football\autocite{Ipsos2003}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Between 2010 and 2018, there are many more win and loss days of the England rugby union team compared to the England national football team. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), potentially stemming from differences in media coverage and audience numbers between the two tournaments. 
+It has been previously suggested that other popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Rugby is the second most popular sport in England after football\autocite{Ipsos2003}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Between 2010 and 2018, there are many more win and loss days of the England rugby union team compared to the England national football team. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), potentially stemming from differences in media coverage and audience numbers between the two tournaments. \TM{And possibly the differnt role of alcohol within the culture of the two sports?}
 
 We also investigated whether England match days have similar effects on other types of non-domestic abusive behaviours, including sexual offences, child and vulnerable adult abuse. A commonality between domestic abuse and these types of offences is the element of control and domination, although domestic abuse is much more frequent in our dataset. We find no evidence that England matches have comparable effects on non-domestic sexual offences and other abuse cases (see Table \ref{otherabuse} in the Appendix). 
 
 Our data further allows us to explore the characteristics of alcohol-related domestic abuse perpetrated on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (with no earlier record for the same victim-offender pair in our dataset), happen in a residential dwelling as opposed to a public location, or result in an injury. We find no evidence that domestic abuse cases perpetrated on England match days are more likely to be newly reported (see Table \ref{Characteristics1} in the Appendix), compared to domestic abuse cases occurring on non-match days. It could be argued that since fans often congregate in pubs to watch England play, there is a higher likelihood that domestic abuse occurs in public and get reported on these days. Interestingly, our results indicate that, compared to non-match days, reported cases are more likely to be perpetrated in public on England loss days, but not on England win days, and that this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England loss days are also more likely to result in an injury, a pattern that is absent from alcohol-related cases.
 
-Next, we turn to repeated cases of domestic abuse (multiple cases with the same victim-offender pair). We are interested in whether the number of days elapsed between two consecutive cases is affected by England football matches. For example, it is possible that England match days bring reported cases of domestic abuse forward, which would have otherwise happened at a later point in time. We investigate this question with two negative binomial regressions, where the outcome variables are the number of days elapsed since the last reported case, and the number of days until the next case, respectively. In addition, using all reported cases, we explore whether the number of hours elapsed before reporting the case is affected by England match days. 
+Next, we turn to repeated cases of domestic abuse (multiple cases with the same victim-offender pair). We are interested in whether the number of days elapsed between two consecutive cases is affected by England football matches. For example, it is possible that England match days bring reported cases of domestic abuse forward, which would have otherwise happened at a later point in time. We investigate this question with two negative binomial regressions, where the outcome variables are the number of days elapsed since the last reported case, and the number of days until the next case, respectively. In addition, using all reported cases, we explore whether the number of hours elapsed before reporting the case is affected by England match days. \TM{Maybe just add a few words to link this back to the nice bit in the introduction contextualising DA as a pattern of behaviour, not just a one off incident}
 
 The results show that non-alcohol related cases perpetrated on England loss days occur fewer days after the previous incident, 192 days, 95\% CI [159 days, 232 days], compared to non-alcohol repeat cases reoccurring on non-match days, 226 days, 95\% CI [207 days, 248 days] (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days are more likely to be followed by another case of abuse in fewer days, 172 days, 95\% CI [138 days, 214 days], compared to cases occurring on non-match days, 242 days, 95\% CI [223 days, 261 days], and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England loss days are likely to be reported after fewer hours, 59 hours, 95\% CI [45 hours, 78 hours], compared to non-alcohol related abuse perpetrated on non-match days, 104 hours, 95\% CI [91 hours, 119 hours]. 
 
 %The results show that non-alcohol related cases perpetrated on England loss days occur slightly sooner after the previous incident, compared to non-alcohol cases reoccurring on non-match days (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days or the day after an England match are more likely to be followed by another case of abuse sooner, compared to non-alcohol cases occurring on non-match days. Interestingly, non-alcohol related cases perpetrated on England loss days or on days following an England match day are likely to be reported sooner, compared to non-alcohol related abuse perpetrated on non-match days. 
 
-It is perhaps surprising that while we found no evidence for an increase in the reported number of domestic abuse cases on England loss days (see Table \ref{specifications}), domestic abuse perpetrated on these days seems to be characteristically different from domestic abuse perpetrated on other days. More specifically, cases perpetrated on England loss days are more likely to occur outside, result in an injury, and get reported sooner. Furthermore, repeated cases perpetrated on England loss days occur slightly sooner following the previous case, but abuse perpetrated on England win days are followed by another incident sooner. While these findings should be interpreted with caution due to the pervasive problem of underreporting, the results suggest differences in the effect of England wins and losses on domestic abuse.
+It is perhaps surprising that while we found no evidence for an increase in the reported number of domestic abuse cases on England loss days (see Table \ref{specifications}), domestic abuse perpetrated on these days seems to be characteristically different from domestic abuse perpetrated on other days. More specifically, cases perpetrated on England loss days are more likely to occur outside, result in an injury, and get reported sooner. Furthermore, repeated cases perpetrated on England loss days occur slightly sooner following the previous case, but abuse perpetrated on England win days are followed by another incident sooner. While these findings should be interpreted with caution due to the pervasive problem of underreporting, the results suggest differences in the effect of England wins and losses on domestic abuse. 
+
+/TM{I tried making a couple of senteces to add on to the end of that paragrph to show what I was thinking. I think they are bad, but I leave them here to hopefully give you an idea of what I was on about:} 
+One possibility is that the effects of losses in the NFL upon domestic abuse is also a factor in England losses, hence the different patterns that we see here. However, alcohol is so strongly intertwined with English football culture, that these alcohol related effects dominate.
 
  \TM{I think this is a really interesting result! Potentially a nice link back to the Card and Lee results.} \AT{Not sure what's the best way, it is a bit tenuous} \NS{Can we quantify coefficients as a number of days with a CI in the main text. So ``5 days sooner'', etc.? }\NS{Is there a break between the text and the table? England loss no-alcohol cases occur sooner but England-loss no-alcohol cases occur later? England win no-alcohol cases reoccur sooner but England-win alcohol cases do not.} \AT{I don't know how to do this properly. I can report it like this:Finally, using the sample of repeated cases, we explore whether previously non-alcohol related cases are more likely to reoccur as alcohol-related abuse on England match days. We investigate this question using a logistic regression, controlling for the type of the previous case (alcohol/non-alcohol related). The results show that on England win days, there is an increased likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix). Taken together, these results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse that follows an England victory is not characteristically different from domestic abuse perpetrated on other days during the year. 
 
 Suggested alternative explanations for the increased number of reported domestic abuse cases on England match days include other high-profile events taking place around the time of the match, increased policing on England match days, and the effect of awareness campaigns before the tournaments\autocite{Brooks-Hay2018}. Our three-hour analysis of the England win effect (Figure \ref{fig:threehours}) show that the temporal pattern of the effect is highly consistent with a match-induced explanation of the increase, making it unlikely that other events occurring on England win days would be responsible for the increase. We could expect that higher levels of policing on England match days would result in an increased number of recorded cases perpetrated outside, and that a successful pre-tournament awareness campaign would result in an increase in the number of newly reported cases. Our results do not support either of these alternative hypotheses (see Table \ref{Characteristics1} in the Appendix). In addition, it is unclear why the effect of other events, different policing practices, or awareness campaigns would depend on the result of the match. 
 
 
-To summarise, we have found that when the England national football team wins, there is a 61\% increase in domestic abuse---but only male-on-female abuse involving alcohol. An increase is also seen in other violent crimes, predominantly in violence perpetrated by men on women. The temporal pattern of the increase suggests a causal mechanism, and the effect is robust to the exclusion of specific tournament years and using data from a different time period and geographical area within England. The effect is specific to football, but not rugby. Apart from the higher likelihood of alcohol-involvement, these cases of abuse are not characteristically different from abuse occurring on other days throughout the year. 
+To summarise, we have found that when the England national football team wins, there is a 61\% increase in domestic abuse---but only male-on-female abuse involving alcohol. \TM{Is this the right number? I thought 61 was all alcohol related, M on F alcohol related was 67} An increase is also seen in other violent crimes, predominantly in violence perpetrated by men on women. The temporal pattern of the increase suggests a causal mechanism, and the effect is robust to the exclusion of specific tournament years and using data from a different time period and geographical area within England. The effect is specific to football, but not rugby. Apart from the higher likelihood of alcohol-involvement, these cases of abuse are not characteristically different from abuse occurring on other days throughout the year. 
 
 For victims, domestic abuse does not occur once every four years following a football match, but is a lived experience of constant fear\NS{Reference here makes it "less hippy"}. 
 Nevertheless, our results provide a deeper understanding of the contexts that can be conducive to abuse. In particular, these findings illuminate that the experience of ``national success'' in a highly male-dominated sport is a breeding ground for male-perpetrated, alcohol-related domestic abuse. From a policy perspective, only a radical transformation of football culture is likely to make any difference\autocite{Swallow}. Leadership in football must be the catalyst for the change that transforms football fandom from an exclusively male-dominated space where misogyny, racism and homophobia are tolerated, into an environment where women and other minorities are more visible, and everyone is welcome and safe from abuse, irrespective of their gender, race and sexual orientation. 
 
-\AT{Is it it too hippie?}\NS{No, I don't think so. You could delete the bit from "Leadership in football..." which sounds overly prescriptive. I guess my feeling is that with rates of 0.47 per 100,000 per day, most people watching the football don't abuse their partner because of the football? (Though the 0.71 per day per 100,000 is going to add up over time...). But you decide.}
+\AT{Is it it too hippie?}\NS{No, I don't think so. You could delete the bit from "Leadership in football..." which sounds overly prescriptive. I guess my feeling is that with rates of 0.47 per 100,000 per day, most people watching the football don't abuse their partner because of the football? (Though the 0.71 per day per 100,000 is going to add up over time...). But you decide.} \TM{This is the only paragraph where I would perhaps tone down slightly. I worry that if we seem like we are trying to give prescriptive suggestions/demands of how this should be fixed then we are going beyond what our own data are telling us, and detracting from the result}
 
 \newpage
 
 \section*{Method}
 
-Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018. The first half of 2017 has been excluded due to missing data. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We restricted our analyses to cases with one victim and one offender. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
+Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018. The first \TM{I thought it was second half. Very likely that I am wrong though.} half of 2017 has been excluded due to missing data. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We restricted our analyses to cases with one victim and one offender. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
 
  To analyse the temporal dynamics of the England win effect (see Figure \ref{fig:threehours}), we divided each day in our dataset into eight three-hour periods, the first one starting at 12am, and used these to identify specific time windows around the time of the match. The exact time of the matches vary considerably (the earliest starting at 1pm, and the latest at 11pm). We first identified the three-hour period of the day into which each match falls. If the start and end time of the match did not fall in the same three-hour period, we chose the three-hour period that covers the larger part of the match (e.g., a 2.5 hour long match starting at 7pm will be assigned to the 6-9pm period and not to the 9pm-12am period).
 
